# clown68000-validator

./: .gitmodules  CMakeLists.txt  README.md  main.c
