cmake_minimum_required(VERSION 3.0)

project(clown68000-validator LANGUAGES C)

add_executable(clown68000-validator
	"main.c"
	"cJSON/cJSON.c"
	"cJSON/cJSON.h"
)

add_subdirectory("clown68000" EXCLUDE_FROM_ALL)
target_link_libraries(clown68000-validator clown68000)

set(LIBDEFLATE_BUILD_STATIC_LIB ON CACHE INTERNAL "" FORCE)
set(LIBDEFLATE_BUILD_SHARED_LIB OFF CACHE INTERNAL "" FORCE)
set(LIBDEFLATE_COMPRESSION_SUPPORT OFF CACHE INTERNAL "" FORCE)
set(LIBDEFLATE_DECOMPRESSION_SUPPORT ON CACHE INTERNAL "" FORCE)
set(LIBDEFLATE_ZLIB_SUPPORT OFF CACHE INTERNAL "" FORCE)
set(LIBDEFLATE_GZIP_SUPPORT ON CACHE INTERNAL "" FORCE)
set(LIBDEFLATE_FREESTANDING OFF CACHE INTERNAL "" FORCE)
set(LIBDEFLATE_BUILD_GZIP OFF CACHE INTERNAL "" FORCE)
set(LIBDEFLATE_BUILD_TESTS OFF CACHE INTERNAL "" FORCE)
set(LIBDEFLATE_USE_SHARED_LIB OFF CACHE INTERNAL "" FORCE)
add_subdirectory("libdeflate" EXCLUDE_FROM_ALL)
target_link_libraries(clown68000-validator libdeflate)
